# C-Practic

./: README.md
Lab1/: CMakeLists.txt
Lab1/task1/: CMakeLists.txt
Lab1/task2/: CMakeLists.txt
Lab1/task3/: CMakeLists.txt
Lab1/task4/: CMakeLists.txt  task4.c
Lab1/task5/: CMakeLists.txt  task5_main.c
Lab1/task6/: CMakeLists.txt  task6_main.c
Lab1/task7/: CMakeLists.txt
Lab1/task8/: CMakeLists.txt  task7_main.c
Lab2/: CMakeLists.txt
Lab3/: CMakeLists.txt
Lab3/task1_for/: CMakeLists.txt
Lab3/task2_while/: CMakeLists.txt
Lab3/task3_dowhile/: CMakeLists.txt
Lab4/: CMakeLists.txt  main.c
Lab5/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c
Lab6/: CMakeLists.txt  task1.c
Lab7/: CMakeLists.txt  main.c  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c
